// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UiKit Button should match the snapshot 1`] = `
.c0 {
  height: 40px;
  min-width: 150px;
  padding: 0 15px;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: white;
  font-family: sans-serif;
  font-weight: normal;
  cursor: pointer;
  opacity: 1;
}

.c0:hover {
  background-color: #333;
}

<div
  className="c0"
  onClick={[MockFunction]}
>
  Test
</div>
`;

exports[`UiKit Button should match the snapshot 2`] = `
.c0 {
  height: 40px;
  min-width: 150px;
  padding: 0 15px;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: white;
  font-family: sans-serif;
  font-weight: bold;
  cursor: pointer;
  opacity: 1;
}

.c0:hover {
  background-color: #333;
}

<div
  className="c0"
  onClick={[MockFunction]}
>
  Test
</div>
`;

exports[`UiKit Button should match the snapshot 3`] = `
.c0 {
  height: 40px;
  min-width: 150px;
  padding: 0 15px;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: white;
  font-family: sans-serif;
  font-weight: normal;
  cursor: pointer;
  opacity: 0.5;
}

<div
  className="c0"
  onClick={null}
>
  Test
</div>
`;

exports[`UiKit ButtonRow should match the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
  className="c0"
>
  <div />
  <div />
</div>
`;

exports[`UiKit Input should match the snapshot 1`] = `
.c0 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  height: 40px;
  background-color: #333;
  border-radius: 5px;
  border: none;
  padding: 0 15px;
  font-size: 15px;
  color: white;
}

.c0:focus {
  outline: none;
}

<input
  className="c0"
  onChange={[Function]}
  value="test"
/>
`;

exports[`UiKit MultipleSelect should match the snapshot 1`] = `
.c0 {
  height: 300px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow-y: scroll;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
}

<div
  className="c0"
>
  <div>
    true
  </div>
  <div>
    false
  </div>
</div>
`;
